<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/bt_manual"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/bt_facebook"
        android:layout_alignRight="@+id/bt_facebook"
        android:layout_below="@+id/bt_facebook"
        android:layout_marginTop="62dp"
        android:text="@string/manual" />

    <Button
        android:id="@+id/bt_general"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/bt_manual"
        android:layout_alignLeft="@+id/bt_contacts"
        android:layout_alignRight="@+id/bt_contacts"
        android:text="@string/general" />

    <Button
        android:id="@+id/bt_facebook"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="138dp"
        android:text="@string/facebook" />

    <Button
        android:id="@+id/bt_contacts"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_above="@+id/bt_manual"
        android:layout_alignParentRight="true"
        android:layout_marginRight="31dp"
        android:text="@string/contacts" />

    

</RelativeLayout>