<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView_manual"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/img_dflt" />

    <EditText
        android:id="@+id/ed_name_manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView_manual"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/imageView_manual"
        android:ems="10"
        android:paddingLeft="10dp" 
        android:textColor="#70CF70"
        android:textColorHint="#70CF70"
        android:hint="@string/name" >
    </EditText>

    <EditText
        android:id="@+id/ed_eventname_manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ed_name_manual"
        android:layout_below="@+id/ed_name_manual"
        android:layout_marginTop="10dp"
        android:textColor="#70CF70"
        android:textColorHint="#70CF70"
        android:ems="10" android:hint="@string/eventname"/>

    <EditText
        android:id="@+id/ed_eventdate_manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ed_eventname_manual"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/bt_save_manual"
        android:ems="10"
        android:focusable="false"
        android:textColor="#70CF70"
        android:textColorHint="#70CF70"
        android:hint="@string/date"
        android:inputType="date" />

    <EditText
        android:id="@+id/ed_email_manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ed_eventdate_manual"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textColor="#70CF70"
        android:textColorHint="#70CF70"
        android:inputType="textEmailAddress" 
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/ed_phnumber_manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ed_email_manual"
        android:layout_marginTop="10dp"
        android:textColorHint="#70CF70"
        android:textColor="#70CF70"
        android:ems="10"
        android:inputType="phone" android:hint="@string/phonenumbar"/>

    <Button
        android:id="@+id/bt_save_manual"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_alignParentRight="true"
        android:background="#70CF70"
        android:textColor="#fff"
        android:textSize="15sp"
        android:layout_below="@+id/ed_phnumber_manual"
        android:layout_marginRight="22dp"
        android:layout_marginTop="20dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/btn_date_pickr"
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:background="#70CF70"
        android:textColor="#fff"
        android:textSize="15sp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_above="@+id/ed_email_manual"
        android:layout_alignLeft="@+id/bt_save_manual"
        android:layout_alignRight="@+id/bt_save_manual"
        android:text="Date" />

</RelativeLayout>